# IfcQtoRunner

./: CMakeLists.txt  LICENSE  README.md
IfcCore/: CMakeLists.txt
IfcCore/geometry/: IfcElemProcessorBase.h  IfcElemProcessorMesh.cpp  IfcElemProcessorMesh.h  IfcElemProcessorMeshFlow.cpp  IfcElemProcessorMeshFlow.h  IfcElemProcessorOCC.cpp  IfcElemProcessorOCC.h  IfcGeometryParser.cpp  IfcGeometryParser.h  geometry.cmake
IfcCore/model/: DataNode.h  SceneData.h
IfcCore/parse/: IfcParseHelper.h  IfcParser.cpp  IfcParser.h  IfcPreview.cpp  IfcPreview.h  IfcSchemaStrategyBase.h  IfcSchemaStrategyImpl.h  IfcStructureBuilder.cpp  IfcStructureBuilder.h  parse.cmake
IfcEngine/: CMakeLists.txt
IfcEngine/model/: DataNode.h  TreeNode.h  model.cmake
IfcEngine/serializer/: IfcParseHelper.h  IfcPreview.cpp  IfcPreview.h  serializer.cmake
IfcViewer/: CMakeLists.txt  IfcParseController.cpp  IfcParseController.h  IfcPreviewWidget.cpp  IfcPreviewWidget.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  OpenGLWidget.cpp  OpenGLWidget.h  OpenGLWidgetDummy.cpp  OpenGLWidgetDummy.h  QtRegistration.h  main.cpp
cmake/: FindIfcOpenShell.cmake  FindOCC.cmake
